feat: Sprint 2-5 - Teams, Security, Payments, Multi-step Forms, Deployment
Sprint 2: Teams & Security
- User signup with auto-org creation
- Organization invites with secure tokens
- API keys for programmatic access

Sprint 3: Payments & Advanced Logic
- Multi-step forms with page navigation
- Jump logic for conditional page skipping
- Stripe integration for payments

Sprint 4: Production Polish
- Dashboard UI upgrade with modern design
- Comprehensive README documentation
- Complete Settings page with API key management

Sprint 5: Deployment
- Render backend config
- Vercel frontend config
- Neon PostgreSQL support
- Supabase S3 storage support
- Deployment guide

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,39 @@
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=securepassword
-POSTGRES_DB=smartform_db
+# ===========================================
+# KTypeform Environment Variables
+# ===========================================
+# Copy this file to .env and fill in your values
 
-MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=secureminiopassword
+# === Security ===
+SECRET_KEY=change-this-to-a-random-string-in-production
 
-N8N_HOST=localhost
+# === Database (Neon PostgreSQL) ===
+POSTGRES_USER=your-neon-user
+POSTGRES_PASSWORD=your-neon-password
+POSTGRES_SERVER=your-neon-host.neon.tech
+POSTGRES_PORT=5432
+POSTGRES_DB=neondb
 
-SECRET_KEY=change_this_in_production_to_random_string
+# === Object Storage (Supabase / MinIO) ===
+# For local development with MinIO:
+# MINIO_ROOT_USER=admin
+# MINIO_ROOT_PASSWORD=admin123
+# For Supabase S3:
+MINIO_ENDPOINT=https://your-project.supabase.co/storage/v1/s3
+MINIO_ROOT_USER=your-supabase-project-id
+MINIO_ROOT_PASSWORD=your-supabase-service-role-key
 
-# LLM Provider Keys (At least one required)
-GROQ_API_KEY=gsk_...
-OPENROUTER_API_KEY=sk-or-v1-...
-HUGGINGFACEHUB_API_TOKEN=hf_...
-OPENAI_API_KEY=sk-...
+# === LLM (AI Generation) ===
+GROQ_API_KEY=your-groq-api-key
+# Alternative:
+# OPENROUTER_API_KEY=your-openrouter-key
+# OPENAI_API_KEY=your-openai-key
 
-# JWT
-ACCESS_TOKEN_EXPIRE_MINUTES=11520
+# === Email (Optional) ===
+# SMTP_HOST=smtp.sendgrid.net
+# SMTP_PORT=587
+# SMTP_USER=apikey
+# SMTP_PASSWORD=your-sendgrid-api-key
+# EMAILS_FROM_EMAIL=noreply@yourdomain.com
+
+# === Stripe (Optional) ===
+# STRIPE_SECRET_KEY=sk_test_your-stripe-key
