--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,8 @@ jinja2==3.1.3
 httpx==0.26.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-weasyprint==61.0
+weasyprint==60.1
+pydyf<0.11.0
 boto3==1.34.14
 httpx
 langgraph
@@ -21,3 +22,5 @@ langchain-openai
 langchain-huggingface
 tenacity
 bcrypt==4.0.1
+email-validator
+stripe
