fix: Render deployment - production Dockerfile and correct render.yaml

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies for WeasyPrint PDF generation
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
@@ -19,6 +19,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Render uses PORT env var
+ENV PORT=8000
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Production command - no reload
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
