docs: Update deployment for Neon + Render + Vercel + Cloudflare R2 stack

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,31 @@
 # ===========================================
 # KTypeform Environment Variables
 # ===========================================
-# Copy this file to .env and fill in your values
 
 # === Security ===
-SECRET_KEY=change-this-to-a-random-string-in-production
+SECRET_KEY=change-this-to-random-string
 
 # === Database (Neon PostgreSQL) ===
 POSTGRES_USER=your-neon-user
 POSTGRES_PASSWORD=your-neon-password
-POSTGRES_SERVER=your-neon-host.neon.tech
+POSTGRES_SERVER=ep-xxx.us-east-2.aws.neon.tech
 POSTGRES_PORT=5432
 POSTGRES_DB=neondb
 
-# === Object Storage (Supabase / MinIO) ===
-# For local development with MinIO:
-# MINIO_ROOT_USER=admin
-# MINIO_ROOT_PASSWORD=admin123
-# For Supabase S3:
-MINIO_ENDPOINT=https://your-project.supabase.co/storage/v1/s3
-MINIO_ROOT_USER=your-supabase-project-id
-MINIO_ROOT_PASSWORD=your-supabase-service-role-key
+# === Storage (Cloudflare R2) ===
+MINIO_ENDPOINT=your-account-id.r2.cloudflarestorage.com
+MINIO_SECURE=true
+MINIO_ROOT_USER=your-r2-access-key-id
+MINIO_ROOT_PASSWORD=your-r2-secret-access-key
 
-# === LLM (AI Generation) ===
+# === AI (Groq - free tier) ===
 GROQ_API_KEY=your-groq-api-key
-# Alternative:
-# OPENROUTER_API_KEY=your-openrouter-key
-# OPENAI_API_KEY=your-openai-key
 
 # === Email (Optional) ===
 # SMTP_HOST=smtp.sendgrid.net
 # SMTP_PORT=587
 # SMTP_USER=apikey
-# SMTP_PASSWORD=your-sendgrid-api-key
-# EMAILS_FROM_EMAIL=noreply@yourdomain.com
+# SMTP_PASSWORD=your-sendgrid-key
 
 # === Stripe (Optional) ===
-# STRIPE_SECRET_KEY=sk_test_your-stripe-key
+# STRIPE_SECRET_KEY=sk_test_xxx
